force-app/main/default/objects/Student__c/fields/Approval_Ststud__c.field-meta.xml
<CustomField>
    <fullName>Approval_Ststud__c</fullName>
    <label>Approval Ststud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>