force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MINING</fullName>
            </value>
            <value>
                <fullName>CIVIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>